--- a/themes/hugo-theme-stack/layouts/partials/sidebar/left.html
+++ b/themes/hugo-theme-stack/layouts/partials/sidebar/left.html
@@ -75,7 +75,7 @@
         </li>
         {{ end }}
         <div class="menu-bottom-section">
-            {{- $currentLanguageCode := .Language.Lang -}}
+            <!-- {{- $currentLanguageCode := .Language.Lang -}}
             {{ with .Site.Home.AllTranslations }}
                 <li id="i18n-switch">  
                     {{ partial "helper/icon" "language" }}
@@ -85,7 +85,7 @@
                         {{ end }}
                     </select>
                 </li>
-            {{ end }}
+            {{ end }} -->
             
             {{ if (default false .Site.Params.colorScheme.toggle) }}
                 <li id="dark-mode-toggle">
